<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/recruiter_name_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_name"
                android:layout_width="match_parent"
                android:inputType="textCapWords"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/recruiter_contact_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contact_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/email_message_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_email"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/junior_check_box"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/include_junior_text" />

        <Spinner xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/drop_down_field"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            tools:listitem="@android:layout/simple_list_item_1" />

        <CheckBox
            android:id="@+id/ready_now_check_box"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/ready_to_start_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/available_date_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/available_from_data_text_field"
                android:layout_width="match_parent"
                android:inputType="date"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/preview_button"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/preview_button_text" />

    </LinearLayout>
</ScrollView>